--- a/bet/Base.lproj/Main.storyboard
+++ b/bet/Base.lproj/Main.storyboard
@@ -228,15 +228,18 @@
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uWm-1W-YxI">
                                 <rect key="frame" x="533" y="361" width="49" height="30"/>
-                                <state key="normal" title="Accept"/>
+                                <state key="normal" title="Accept">
+                                    <color key="titleColor" red="0.052017980329999998" green="0.72309695510000005" blue="0.083916578340000006" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
-                                    <action selector="requestAccepted:" destination="hQf-hl-8GK" eventType="touchUpInside" id="S3t-76-g8D"/>
                                     <segue destination="Dee-EW-8Ql" kind="unwind" identifier="acceptFriendRequest" unwindAction="unwindToRequestsViewController:" id="kJZ-cK-3wE"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SPm-NB-ga8">
                                 <rect key="frame" x="22" y="361" width="43" height="30"/>
-                                <state key="normal" title="Reject"/>
+                                <state key="normal" title="Reject">
+                                    <color key="titleColor" red="1" green="0.093669809470000004" blue="0.048010594730000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="requestRejected:" destination="hQf-hl-8GK" eventType="touchUpInside" id="5q3-mS-NsS"/>
                                     <segue destination="Dee-EW-8Ql" kind="unwind" identifier="rejectFriendRequest" unwindAction="unwindToRequestsViewController:" id="Jrh-t1-4DQ"/>
@@ -545,7 +548,7 @@
                                 <state key="normal" title="Reject"/>
                                 <connections>
                                     <action selector="userRejectsResult:" destination="187-KX-T0x" eventType="touchUpInside" id="rmS-Kz-slx"/>
-                                    <segue destination="cUg-Sd-gd4" kind="unwind" identifier="rejectFriendRequest" unwindAction="unwindToRequestsViewController:" id="NMe-YA-Oy6"/>
+                                    <segue destination="cUg-Sd-gd4" kind="unwind" identifier="rejectResultRequest" unwindAction="unwindToRequestsViewController:" id="EoJ-rm-udc"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p89-Ck-0Jg">
@@ -555,6 +558,7 @@
                                 </constraints>
                                 <state key="normal" title="Accept"/>
                                 <connections>
+                                    <action selector="userAcceptsResult:" destination="187-KX-T0x" eventType="touchUpInside" id="FWg-98-4QR"/>
                                     <segue destination="cUg-Sd-gd4" kind="unwind" identifier="acceptResultRequest" unwindAction="unwindToRequestsViewController:" id="S5i-tx-PPe"/>
                                 </connections>
                             </button>
@@ -623,14 +627,18 @@
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wbg-xh-Vgn">
                                 <rect key="frame" x="13" y="380" width="43" height="30"/>
-                                <state key="normal" title="Reject"/>
+                                <state key="normal" title="Reject">
+                                    <color key="titleColor" red="1" green="0.093669809470000004" blue="0.048010594730000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="quu-ud-i3K" kind="unwind" identifier="reject" unwindAction="unwindToRequestsViewController:" id="Ogf-75-ac5"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="M9G-Em-MMU">
                                 <rect key="frame" x="533" y="380" width="49" height="30"/>
-                                <state key="normal" title="Accept"/>
+                                <state key="normal" title="Accept">
+                                    <color key="titleColor" red="1" green="0.093669809470000004" blue="0.048010594730000002" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <segue destination="quu-ud-i3K" kind="unwind" identifier="accept" unwindAction="unwindToRequestsViewController:" id="jW0-Go-w2e"/>
                                 </connections>
@@ -1095,6 +1103,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="lightContent"/>
+                    <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="2rg-gs-d5a">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </refreshControl>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UrS-As-Lz5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
